# marine-species-tracker

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .flake8  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/api/: urls.py
backend/core/: celery.py  settings.py  urls.py
backend/docker/celery/: beat_entrypoint.sh  worker_entrypoint.sh
backend/map/: serializers.py  test_map.py  urls.py  views.py
backend/observations/: admin.py  models.py  permissions.py  serializers.py  test_geomap_observations.py  test_obersations.py  test_observations.py  urls.py  views.py
backend/observations/migrations/: 0001_initial.py  0002_observation_created_at_observation_updated_at.py  0003_observation_source_observation_validated.py  0004_remove_observation_latitude_and_more.py  0005_observation_image.py  0006_alter_observation_location.py  0007_alter_observation_image.py  0008_remove_observation_depth_observation_bathymetry_and_more.py  0009_alter_observation_notes.py  0010_alter_observation_options.py
backend/scripts/: mark_existing_users_verified.py
backend/species/: admin.py  models.py  serializers.py  urls.py  views.py
backend/species/migrations/: 0001_initial.py  0002_alter_curatedobservation_location.py  0003_rename_depth_curatedobservation_bathymetry_and_more.py  0004_curatedobservation_sex.py
backend/species/tasks/: __init__.py  obis_api.py  obis_etl.py  worms_api.py
backend/users/: authentication.py  models.py  serializers.py  test_users.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  (+2 more)
(+61 files in other folders)
